test/fail/arg_type_mismatch.zn
# ERRORS: 3
func add(a: int, b: int) {
  a + b
}

func main() {
  add(true, 1)
  add(1)
  add(1, 2, 3)
  0
}
